# gvr-android-sdk

./: build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libraries/headers/: .gitignore
samples/ndk-controllerpaint/: build.gradle
samples/ndk-treasurehunt/: CMakeLists.txt  build.gradle
samples/ndk-treasurehunt/src/main/: AndroidManifest.xml
samples/ndk-treasurehunt/src/main/java/com/google/vr/ndk/samples/treasurehunt/: MainActivity.java  MainActivity.kt  SetupStreamingDialog.kt
samples/ndk-treasurehunt/src/main/java/ru.simlabs.stream/: StreamCommander.kt  StreamDecoder.kt
samples/ndk-treasurehunt/src/main/java/ru.simlabs.stream/unreal/: AndroidMediaTextureUpdater.kt  BitmapRenderer.kt
samples/ndk-treasurehunt/src/main/java/ru.simlabs.stream/utils/: CameraControl.kt  ClientType.kt  Command.kt  Frame.kt  Quaternion.kt  StreamPolicy.kt  StreamPreferencesConstants.kt  helpers.kt
samples/ndk-treasurehunt/src/main/java/ru/simlabs/vr/: MainActivity.kt  SetupStreamingDialog.kt
samples/ndk-treasurehunt/src/main/java/ru/simlabs/vr/stream/: StreamCommander.kt  StreamDecoder.kt
samples/ndk-treasurehunt/src/main/java/ru/simlabs/vr/stream/utils/: ClientType.kt  Command.kt  Frame.kt  StreamPolicy.kt  StreamPreferencesConstants.kt
samples/ndk-treasurehunt/src/main/jni/: treasure_hunt_jni.cc  treasure_hunt_renderer.cc  treasure_hunt_renderer.h
samples/ndk-treasurehunt/src/main/res/layout/: dialog_streaming_setup.xml
samples/ndk-treasurehunt/src/main/res/values/: strings.xml
samples/sdk-controllerclient/: build.gradle
samples/sdk-simplepanowidget/: build.gradle
samples/sdk-simplevideowidget/: build.gradle
samples/sdk-treasurehunt/: build.gradle
samples/sdk-video360/: build.gradle
samples/sdk-videoplayer/: build.gradle
(+7 files in other folders)
